--- a/labs/lab09/presentation/os2--lab09--presentation.qmd
+++ b/labs/lab09/presentation/os2--lab09--presentation.qmd
@@ -3,10 +3,10 @@
 
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
+  name: Гелдиев Ыхлас
   degrees: DSc
   orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  email: 1032249184@pfur.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
@@ -14,10 +14,10 @@ author:
       city: Москва
       address: ул. Миклухо-Маклая, д. 6
 ## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
+title: "Лабораторная работа № 9"
+subtitle: "Управление SELinux"
 license: CC BY
-date: 1970-01-01
+date: 2025-10-31
 ## Generic options
 lang: ru-RU
 crossref:
@@ -26,8 +26,13 @@ crossref:
   lol-title: Листинги
 ## Formats
 format:
-### Pdf output format
+  ### Pdf output format
   beamer:
+    include-in-header:
+      text: |
+        \usepackage{fontspec}
+        \setmainfont{Noto Serif}
+        \setsansfont{Noto Sans}
     toc: true
     toc-title: Содержание
     number-sections: true
@@ -38,10 +43,10 @@ format:
     section-titles: true
     theme: metropolis
     themeoptions: progressbar=frametitle,sectionpage=progressbar,numbering=fraction
-#### Language
+    #### Language
     babel-lang: russian
     babel-otherlangs: english
-### Html output
+  ### Html output
   revealjs:
     transition: slide
     margin: 0.2
@@ -55,178 +60,324 @@ format:
 
 ## Докладчик
 
-:::::::::::::: {.columns align=center}
-::: {.column width="70%"}
-
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
-  * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
-
-:::
-::: {.column width="30%"}
-
-![](./image/kulyabov.jpg)
-
-:::
-::::::::::::::
+- Гелдиев Ыхлас
+- студент
+- Российский университет дружбы народов им. П. Лумумбы
+- [1032249184@pfur.ru](mailto:1032249184@pfur.ru)
+- <https://geldiyevy.github.io/ru/>
 
 # Вводная часть
 
-## Актуальность
+## Цель работы
 
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
+Получить навыки работы с контекстом безопасности и политиками SELinux.
 
-## Объект и предмет исследования
+## Задание
 
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
+1. Продемонстрируйте навыки по управлению режимами SELinux (см. раздел 9.4.1).
+2. Продемонстрируйте навыки по восстановлению контекста безопасности SELinux (см. раздел 9.4.2).
+3. Настройте контекст безопасности для нестандартного расположения файлов вебслужбы (см. раздел 9.4.3).
+4. Продемонстрируйте навыки работы с переключателями SELinux (см. раздел 9.4.4)
 
-## Цели и задачи
+# Выполнение лабораторной работы
 
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
+# Управление режимами SELinux
 
-## Материалы и методы
+## Запустите терминал и получите полномочия администратора: ([рис. @fig-001])
 
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
+su -
 
-# Создание презентации
+## Просмотрите текущую информацию о состоянии SELinux: ([рис. @fig-001])
 
-## Процессор `pandoc`
+sestatus -v
 
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
+![1](image/1.png){#fig-001}
 
-## Формат `pdf`
+## В отчёте построчно поясните выведенную на экран информацию:
 
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
+**sestatus -v** – выводит статус SELinux с подробными деталями.
 
-## Код для формата `pdf`
+- **SELinux status:** `enabled` — SELinux активен.
+- **SELinuxfs mount:** `/sys/fs/selinux` — точка монтирования файловой системы SELinux.
+- **Current mode:** `enforcing` — текущий режим (применяется политика).
+- **Mode from config file:** `enforcing` — режим, указанный в `/etc/selinux/config`.
+- **Policy version:** `31` — номер версии загруженной политики.
+- **Policy from config file:** `targeted` — тип политики, указанной в конфиге.
+- **Policy MLS status:** `disabled` — поддержка MLS/MCS отключена.
+- **Policy deny_unknown:** `allowed` — неизвестные типы объектов допускаются.
+- **Max kernel policy bytes:** `524288` — максимальный размер политики, который ядро может загрузить.
+- **Policy loaded:** `yes` — политика успешно загружена.
+- **Policy caps:** `0` — количество ограничений (caps) в текущей политике.
+- **Policy booleans:** `<число>` — количество определённых булевых переменных.
+- **Policy modules:** `<число>` — количество загруженных модулей политики.
+- **Policy file context:** `/etc/selinux/targeted/contexts/files` — путь к файлам контекстов.
+- **Policy users:** `<число>` — количество определённых SELinux‑пользователей.
+- **Policy roles:** `<число>` — количество ролей.
+- **Policy types:** `<число>` — количество типов объектов.
+- **Policy levels:** `0` — уровни MLS/MCS (отключены).
+- **Policy categories:** `0` — категории MLS/MCS (отключены).
 
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
+## Посмотрите, в каком режиме работает SELinux:
 
-## Формат `html`
+getenforce
+По умолчанию SELinux находится в режиме принудительного исполнения (Enforcing).
 
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
+![2](image/2.png)
 
-## Код для формата `html`
+## Измените режим работы SELinux на разрешающий (Permissive):
 
-- Тема задаётся в файле `Makefile`
+setenforce 0
 
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
+и снова введите
+getenforce
 
-## Получающиеся форматы
+![3](image/3.png)
 
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
+## В файле /etc/sysconfig/selinux с помощью редактора установите
 
-# Элементы презентации
+SELINUX=disabled
+Перезагрузите систему.
 
-## Актуальность
+![4](image/4.png)
 
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
+## После перезагрузки запустите терминал и получите полномочия администратора. ([рис. @fig-002])
 
-## Цели и задачи
+## Посмотрите статус SELinux: ([рис. @fig-002])
 
-- Не формулируйте более 1--2 целей исследования
+getenforce
+Вы увидите, что SELinux теперь отключён.
 
-## Материалы и методы
+## Попробуйте переключить режим работы SELinux: ([рис. @fig-002])
 
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
+setenforce 1
 
-## Содержание исследования
+![5](image/5.png){#fig-002}
 
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
+## Какая реакция системы?
 
-## Результаты
+Вы не можете переключаться между отключённым и принудительным режимом без перезагрузки системы.
 
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
+## Откройте файл /etc/sysconfig/selinux с помощью редактора и установите:
 
+SELINUX=enforcing
+Перезагрузите систему.
 
-## Итоговый слайд
+![6](image/6.png)
 
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
+## Во время загрузки системы вы, скорее, всего получите предупреждающее сообщение о необходимости восстановления меток SELinux, что может занять некоторое время, а также потребует дополнительной перезагрузки системы.
 
-# Рекомендую
+![7](image/7.png)
 
-## Принцип 10/20/30
+## После перезагрузки в терминале с полномочиями администратора просмотрите текущую информацию о состоянии SELinux:
 
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
+sestatus -v
+Убедитесь, что система работает в принудительном режиме (enforcing) использования SELinux
 
-## Связь слайдов
+![8](image/8.png)
 
-::: incremental
+# Использование restorecon для восстановления контекста безопасности
 
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
+## Запустите терминал и получите полномочия администратора
 
-:::
+![9](image/9.png)
 
-## Количество сущностей
+## Посмотрите контекст безопасности файла /etc/hosts: ([рим. @fig-004])
 
-::: incremental
+ls -Z /etc/hosts
+Вы увидите, что у файла есть метка контекста net_conf_t.
 
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
+## Скопируйте файл /etc/hosts в домашний каталог: ([рим. @fig-004])
 
-:::
+cp /etc/hosts ~/
+Проверьте контекст файла ~/hosts: ([рим. @fig-004])
+ls -Z ~/hosts
+Поскольку копирование считается созданием нового файла, то параметр контекста в файле ~/hosts, расположенном в домашнем каталоге, станет admin_home_t.
 
-## Общие рекомендации
+##
 
-::: incremental
+![10](image/10.png){#fig-004}
 
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
+## Попытайтесь перезаписать существующий файл hosts из домашнего каталога в каталог /etc:
 
-:::
+mv ~/hosts /etc
+и подтвердите, что вы хотите сделать это.
 
-## Представление данных
+![11](image/11.png)
 
-::: incremental
+## Убедитесь, что тип контекста по-прежнему установлен на admin_home_t:
 
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
+ls -Z /etc/hosts
 
-:::
+![12](image/12.png)
+
+## Исправьте контекст безопасности:
+
+restorecon -v /etc/hosts
+Опция -v покажет процесс изменения.
+
+![13](image/13.png)
+
+## Убедитесь, что тип контекста изменился:
+
+ls -Z /etc/hosts
+
+![14](image/14.png)
+
+## Для массового исправления контекста безопасности на файловой системе введите
+
+touch /.autorelabel
+И перезагрузите систему. Во время перезапуска не забудьте нажать клавишу Esc на клавиатуре, чтобы вы видели загрузочные сообщения. Вы увидите, что файловая система автоматически перемаркирована.
+
+![15](image/15.png)
+
+##
+
+![16](image/16.png)
+
+# Настройка контекста безопасности для нестандартного расположения файлов веб-сервера
+
+## Запустите терминал и получите полномочия администратора.
+
+![17](image/17.png)
+
+## Установите необходимое программное обеспечение:
+
+dnf -y install httpd
+dnf -y install lynx
+
+![18](image/18.png)
+
+## Создайте новое хранилище для файлов web-сервера:
+
+mkdir /web
+
+![19](image/19.png)
+
+## Создайте файл index.html в каталоге с контентом веб-сервера:
+
+cd /web
+touch index.html
+
+![20](image/20.png)
+
+## и поместите в файл следующий текст:
+
+Welcome to my web-server
+
+![21](image/21.png)
+
+## В файле /etc/httpd/conf/httpd.conf закомментируйте строку
+
+DocumentRoot "/var/www/html"
+и ниже добавьте строку
+DocumentRoot "/web"
+Затем в этом же файле ниже закомментируйте раздел
+<Directory "/var/www">
+AllowOverride None
+Require all granted
+</Directory>
+и добавьте следующий раздел, определяющий правила доступа:
+<Directory "/web">
+AllowOverride None
+Require all granted
+</Directory>
+
+##
+
+![22](image/22.png)
+
+## Запустите веб-сервер и службу httpd:
+
+systemctl start httpd
+systemctl enable httpd
+
+![23](image/23.png)
+
+## В терминале под учётной записью своего пользователя при обращении к веб-серверу в текстовом браузере lynx:
+
+lynx http://localhost
+вы увидите веб-страницу Red Hat по умолчанию, а не содержимое только что созданного файла index.html.
+
+В нижней части терминала с lynx указаны подсказки по навигации. Для выхода из
+lynx нажмите q .
+
+![24](image/24.png)
+
+## В терминале с полномочиями администратора примените новую метку контекста
+
+к /web:
+semanage fcontext -a -t httpd_sys_content_t "/web(/.\*)?"
+
+![25](image/25.png)
+
+## Восстановите контекст безопасности:
+
+restorecon -R -v /web
+
+![26](image/26.png)
+
+## В терминале под учётной записью своего пользователя снова обратитесь к веб-серверу:
+
+lynx http://localhost
+Теперь вы получите доступ к своей пользовательской веб-странице. Если этого не произошло, то перегрузите систему и снова попытайтесь получить доступ к своей пользовательской веб-странице. В случае успеха на экране должна быть отображена запись «Welcome to my web-server».
+
+![26](image/27.png)
+
+# Работа с переключателями SELinux
+
+## Запустите терминал и получите полномочия администратора.
+
+![28](image/28.png)
+
+## Посмотрите список переключателей SELinux для службы ftp:
+
+getsebool -a | grep ftp
+Вы увидите переключатель ftpd_anon_write с текущим значением off.
+
+![29](image/29.png)
+
+## Для службы ftpd_anon посмотрите список переключателей с пояснением, за что отвечает каждый переключатель, включён он или выключен:
+
+- ftpd_anon – разрешает анонимный FTP‑доступ (FTP‑демон может обслуживать анонимных пользователей). Он выключен.
+
+semanage boolean -l | grep ftpd_anon
+
+![30](image/30.png)
+
+## Измените текущее значение переключателя для службы ftpd_anon_write с off на on:
+
+setsebool ftpd_anon_write on
+
+![31](image/31.png)
+
+## Повторно посмотрите список переключателей SELinux для службы ftpd_anon_write:
+
+getsebool ftpd_anon_write
+
+![32](image/32.png)
+
+## Посмотрите список переключателей с пояснением:
+
+semanage boolean -l | grep ftpd_anon
+Обратите внимание, что настройка времени выполнения включена, но постоянная настройка по-прежнему отключена.
+
+![33](image/33.png)
+
+## Измените постоянное значение переключателя для службы ftpd_anon_write с off на on:
+
+setsebool -P ftpd_anon_write on
+
+![34](image/34.png)
+
+## Посмотрите список переключателей:
+
+semanage boolean -l | grep ftpd_anon
+В отчёте отразите, какое состояние имеет переключатель?
+
+![35](image/35.png)
+
+Переключатель имеет состояние (on, on), что означает что оно сейчас и при перезапуске будет включено
+
+## Выводы
+
+Я получил навыки работы с контекстом безопасности и политиками SELinux.
