--- a/labs/lab09/report/os2--lab09--report.qmd
+++ b/labs/lab09/report/os2--lab09--report.qmd
@@ -3,10 +3,10 @@
 
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
+  name: Гелдиев Ыхлас
   degrees: DSc
   orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  email: 1032249184@pfur.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
@@ -14,8 +14,8 @@ author:
       city: Москва
       address: ул. Миклухо-Маклая, д. 6
 ## Title
-title: "Шаблон отчёта по лабораторной работе"
-subtitle: "Простейший вариант"
+title: "Лабораторная работа № 9"
+subtitle: "Управление SELinux"
 license: "CC BY"
 ## Generic options
 lang: ru-RU
@@ -34,7 +34,7 @@ bibliography:
 csl: _resources/csl/gost-r-7-0-5-2008-numeric.csl
 ## Formats
 format:
-### Pdf output format
+  ### Pdf output format
   pdf:
     toc: true
     number-sections: true
@@ -42,22 +42,22 @@ format:
     toc-depth: 2
     lof: true # List of figures
     lot: true # List of tables
-#### Document
+    #### Document
     documentclass: scrreprt
     papersize: a4
     fontsize: 12pt
     linestretch: 1.5
-#### Language
+    #### Language
     babel-lang: russian
     babel-otherlangs: english
-#### Biblatex
+    #### Biblatex
     cite-method: biblatex
     biblio-style: gost-numeric
     biblatexoptions:
       - backend=biber
       - langhook=extras
       - autolang=other*
-#### Misc options
+    #### Misc options
     csquotes: true
     indent: true
     header-includes: |
@@ -65,7 +65,7 @@ format:
       \usepackage{float}
       \floatplacement{figure}{H}
       \usepackage[math,RM={Scale=0.94},SS={Scale=0.94},SScon={Scale=0.94},TT={Scale=MatchLowercase,FakeStretch=0.9},DefaultFeatures={Ligatures=Common}]{plex-otf}
-### Docx output format
+  ### Docx output format
   docx:
     toc: true
     number-sections: true
@@ -74,44 +74,312 @@ format:
 
 # Цель работы
 
-Здесь приводится формулировка цели лабораторной работы. Формулировки цели для каждой лабораторной работы приведены в методических указаниях.
-
-Цель данного шаблона --- максимально упростить подготовку отчётов по лабораторным работам.  Модифицируя данный шаблон, студенты смогут без труда подготовить отчёт по лабораторным работам, а также познакомиться с основными возможностями разметки Markdown.
+Получить навыки работы с контекстом безопасности и политиками SELinux.
 
 # Задание
 
-Здесь приводится описание задания в соответствии с рекомендациями методического пособия и выданным вариантом.
-
-# Теоретическое введение
-
-Здесь описываются теоретические аспекты, связанные с выполнением работы.
-
-Например, в [табл. @tbl-std-dir] приведено краткое описание стандартных каталогов Unix.
-
-| Имя каталога | Описание каталога                                                                                                          |
-|--------------|----------------------------------------------------------------------------------------------------------------------------|
-| `/`          | Корневая директория, содержащая всю файловую                                                                               |
-| `/bin `      | Основные системные утилиты, необходимые как в однопользовательском режиме, так и при обычной работе всем пользователям     |
-| `/etc`       | Общесистемные конфигурационные файлы и файлы конфигурации установленных программ                                           |
-| `/home`      | Содержит домашние директории пользователей, которые, в свою очередь, содержат персональные настройки и данные пользователя |
-| `/media`     | Точки монтирования для сменных носителей                                                                                   |
-| `/root`      | Домашняя директория пользователя  `root`                                                                                   |
-| `/tmp`       | Временные файлы                                                                                                            |
-| `/usr`       | Вторичная иерархия для данных пользователя                                                                                 |
-
-: Описание некоторых каталогов файловой системы GNU Linux {#tbl-std-dir}
-
-Более подробно про Unix см. в [@tanenbaum_book_modern-os_ru; @robbins_book_bash_en; @zarrelli_book_mastering-bash_en; @newham_book_learning-bash_en].
+1. Продемонстрируйте навыки по управлению режимами SELinux (см. раздел 9.4.1).
+2. Продемонстрируйте навыки по восстановлению контекста безопасности SELinux (см. раздел 9.4.2).
+3. Настройте контекст безопасности для нестандартного расположения файлов вебслужбы (см. раздел 9.4.3).
+4. Продемонстрируйте навыки работы с переключателями SELinux (см. раздел 9.4.4)
 
 # Выполнение лабораторной работы
 
-Описываются проведённые действия, в качестве иллюстрации даётся ссылка на иллюстрацию ([рис. @fig-001]).
+## Управление режимами SELinux
 
-![V Сольвеевский конгресс (1927) «Электроны и фотоны»](image/solvay.jpg){#fig-001 width=70%}
+1. Запустите терминал и получите полномочия администратора: ([рис. @fig-001])
+   su -
+
+2. Просмотрите текущую информацию о состоянии SELinux: ([рис. @fig-001])
+   sestatus -v
+
+   ![1](image/1.png){#fig-001}
+
+   В отчёте построчно поясните выведенную на экран информацию:
+
+   **sestatus -v** – выводит статус SELinux с подробными деталями.
+
+   - **SELinux status:** `enabled` — SELinux активен.
+   - **SELinuxfs mount:** `/sys/fs/selinux` — точка монтирования файловой системы SELinux.
+   - **Current mode:** `enforcing` — текущий режим (применяется политика).
+   - **Mode from config file:** `enforcing` — режим, указанный в `/etc/selinux/config`.
+   - **Policy version:** `31` — номер версии загруженной политики.
+   - **Policy from config file:** `targeted` — тип политики, указанной в конфиге.
+   - **Policy MLS status:** `disabled` — поддержка MLS/MCS отключена.
+   - **Policy deny_unknown:** `allowed` — неизвестные типы объектов допускаются.
+   - **Max kernel policy bytes:** `524288` — максимальный размер политики, который ядро может загрузить.
+   - **Policy loaded:** `yes` — политика успешно загружена.
+   - **Policy caps:** `0` — количество ограничений (caps) в текущей политике.
+   - **Policy booleans:** `<число>` — количество определённых булевых переменных.
+   - **Policy modules:** `<число>` — количество загруженных модулей политики.
+   - **Policy file context:** `/etc/selinux/targeted/contexts/files` — путь к файлам контекстов.
+   - **Policy users:** `<число>` — количество определённых SELinux‑пользователей.
+   - **Policy roles:** `<число>` — количество ролей.
+   - **Policy types:** `<число>` — количество типов объектов.
+   - **Policy levels:** `0` — уровни MLS/MCS (отключены).
+   - **Policy categories:** `0` — категории MLS/MCS (отключены).
+
+3. Посмотрите, в каком режиме работает SELinux:
+   getenforce
+   По умолчанию SELinux находится в режиме принудительного исполнения (Enforcing).
+
+   ![2](image/2.png)
+
+4. Измените режим работы SELinux на разрешающий (Permissive):
+   setenforce 0
+
+   и снова введите
+   getenforce
+
+   ![3](image/3.png)
+
+5. В файле /etc/sysconfig/selinux с помощью редактора установите
+   SELINUX=disabled
+   Перезагрузите систему.
+
+   ![4](image/4.png)
+
+6. После перезагрузки запустите терминал и получите полномочия администратора. ([рис. @fig-002])
+
+7. Посмотрите статус SELinux: ([рис. @fig-002])
+   getenforce
+   Вы увидите, что SELinux теперь отключён.
+
+8. Попробуйте переключить режим работы SELinux: ([рис. @fig-002])
+   setenforce 1
+
+   ![5](image/5.png){#fig-002}
+
+   Какая реакция системы?
+   Вы не можете переключаться между отключённым и принудительным режимом без перезагрузки системы.
+
+9. Откройте файл /etc/sysconfig/selinux с помощью редактора и установите:
+   SELINUX=enforcing
+   Перезагрузите систему.
+
+   ![6](image/6.png)
+
+10. Во время загрузки системы вы, скорее, всего получите предупреждающее сообщение о необходимости восстановления меток SELinux, что может занять некоторое время, а также потребует дополнительной перезагрузки системы.
+
+    ![7](image/7.png)
+
+11. После перезагрузки в терминале с полномочиями администратора просмотрите текущую информацию о состоянии SELinux:
+    sestatus -v
+    Убедитесь, что система работает в принудительном режиме (enforcing) использования SELinux
+
+    ![8](image/8.png)
+
+## Использование restorecon для восстановления контекста безопасности
+
+1. Запустите терминал и получите полномочия администратора
+
+   ![9](image/9.png)
+
+2. Посмотрите контекст безопасности файла /etc/hosts: ([рим. @fig-004])
+   ls -Z /etc/hosts
+   Вы увидите, что у файла есть метка контекста net_conf_t.
+
+3. Скопируйте файл /etc/hosts в домашний каталог: ([рим. @fig-004])
+   cp /etc/hosts ~/
+   Проверьте контекст файла ~/hosts: ([рим. @fig-004])
+   ls -Z ~/hosts
+   Поскольку копирование считается созданием нового файла, то параметр контекста в файле ~/hosts, расположенном в домашнем каталоге, станет admin_home_t.
+
+   ![10](image/10.png){#fig-004}
+
+4. Попытайтесь перезаписать существующий файл hosts из домашнего каталога в каталог /etc:
+   mv ~/hosts /etc
+   и подтвердите, что вы хотите сделать это.
+
+   ![11](image/11.png)
+
+5. Убедитесь, что тип контекста по-прежнему установлен на admin_home_t:
+   ls -Z /etc/hosts
+
+   ![12](image/12.png)
+
+6. Исправьте контекст безопасности:
+   restorecon -v /etc/hosts
+   Опция -v покажет процесс изменения.
+
+   ![13](image/13.png)
+
+7. Убедитесь, что тип контекста изменился:
+   ls -Z /etc/hosts
+
+   ![14](image/14.png)
+
+8. Для массового исправления контекста безопасности на файловой системе введите
+   touch /.autorelabel
+   и перезагрузите систему. Во время перезапуска не забудьте нажать клавишу Esc на клавиатуре, чтобы вы видели загрузочные сообщения. Вы увидите, что файловая система автоматически перемаркирована.
+
+   ![15](image/15.png)
+
+   ![16](image/16.png)
+
+## Настройка контекста безопасности для нестандартного расположения файлов веб-сервера
+
+1. Запустите терминал и получите полномочия администратора.
+
+   ![17](image/17.png)
+
+2. Установите необходимое программное обеспечение:
+   dnf -y install httpd
+   dnf -y install lynx
+
+   ![18](image/18.png)
+
+3. Создайте новое хранилище для файлов web-сервера:
+   mkdir /web
+
+   ![19](image/19.png)
+
+4. Создайте файл index.html в каталоге с контентом веб-сервера:
+   cd /web
+   touch index.html
+
+   ![20](image/20.png)
+
+   и поместите в файл следующий текст:
+   Welcome to my web-server
+
+   ![21](image/21.png)
+
+5. В файле /etc/httpd/conf/httpd.conf закомментируйте строку
+   DocumentRoot "/var/www/html"
+   и ниже добавьте строку
+   DocumentRoot "/web"
+   Затем в этом же файле ниже закомментируйте раздел
+   <Directory "/var/www">
+   AllowOverride None
+   Require all granted
+   </Directory>
+   и добавьте следующий раздел, определяющий правила доступа:
+   <Directory "/web">
+   AllowOverride None
+   Require all granted
+   </Directory>
+
+   ![22](image/22.png)
+
+6. Запустите веб-сервер и службу httpd:
+   systemctl start httpd
+   systemctl enable httpd
+
+   ![23](image/23.png)
+
+7. В терминале под учётной записью своего пользователя при обращении к веб-серверу в текстовом браузере lynx:
+   lynx http://localhost
+   вы увидите веб-страницу Red Hat по умолчанию, а не содержимое только что созданного файла index.html.
+
+   В нижней части терминала с lynx указаны подсказки по навигации. Для выхода из
+   lynx нажмите q .
+
+   ![24](image/24.png)
+
+8. В терминале с полномочиями администратора примените новую метку контекста
+   к /web:
+   semanage fcontext -a -t httpd_sys_content_t "/web(/.\*)?"
+
+   ![25](image/25.png)
+
+9. Восстановите контекст безопасности:
+   restorecon -R -v /web
+
+   ![26](image/26.png)
+
+10. В терминале под учётной записью своего пользователя снова обратитесь к веб-серверу:
+    lynx http://localhost
+    Теперь вы получите доступ к своей пользовательской веб-странице. Если этого не произошло, то перегрузите систему и снова попытайтесь получить доступ к своей пользовательской веб-странице. В случае успеха на экране должна быть отображена запись «Welcome to my web-server».
+
+    ![26](image/27.png)
+
+## Работа с переключателями SELinux
+
+1. Запустите терминал и получите полномочия администратора.
+
+   ![28](image/28.png)
+
+2. Посмотрите список переключателей SELinux для службы ftp:
+   getsebool -a | grep ftp
+   Вы увидите переключатель ftpd_anon_write с текущим значением off.
+
+   ![29](image/29.png)
+
+3. Для службы ftpd_anon посмотрите список переключателей с пояснением, за что отвечает каждый переключатель, включён он или выключен:
+   semanage boolean -l | grep ftpd_anon
+
+   ![30](image/30.png)
+
+   - ftpd_anon – разрешает анонимный FTP‑доступ (FTP‑демон может обслуживать анонимных пользователей). Он выключен.
+
+4. Измените текущее значение переключателя для службы ftpd_anon_write с off на on:
+   setsebool ftpd_anon_write on
+
+   ![31](image/31.png)
+
+5. Повторно посмотрите список переключателей SELinux для службы ftpd_anon_write:
+   getsebool ftpd_anon_write
+
+   ![32](image/32.png)
+
+6. Посмотрите список переключателей с пояснением:
+   semanage boolean -l | grep ftpd_anon
+   Обратите внимание, что настройка времени выполнения включена, но постоянная настройка по-прежнему отключена.
+
+   ![33](image/33.png)
+
+7. Измените постоянное значение переключателя для службы ftpd_anon_write с off на on:
+   setsebool -P ftpd_anon_write on
+
+   ![34](image/34.png)
+
+8. Посмотрите список переключателей:
+   semanage boolean -l | grep ftpd_anon
+   В отчёте отразите, какое состояние имеет переключатель?
+
+   ![35](image/35.png)
+
+   Переключатель имеет состояние (on, on), что означает что оно сейчас и при перезапуске будет включено
+
+## Контрольные вопросы
+
+1. Вы хотите временно поставить SELinux в разрешающем режиме. Какую команду вы используете?
+
+   setenforce 0
+
+2. Вам нужен список всех доступных переключателей SELinux. Какую команду вы используете?
+
+   getsebool -a
+
+3. Каково имя пакета, который требуется установить для получения легко читаемых сообщений журнала SELinux в журнале аудита?
+
+   policycoreutils-python-utils (или в старых дистрибутивах policycoreutils-python)
+
+4. Какие команды вам нужно выполнить, чтобы применить тип контекста httpd_sys_content_t к каталогу /web?
+
+   chcon -R -t httpd_sys_content_t /web
+   restorecon -R /web
+
+5. Какой файл вам нужно изменить, если вы хотите полностью отключить SELinux?
+
+   /etc/selinux/config
+
+6. Где SELinux регистрирует все свои сообщения?
+
+   /var/log/audit/audit.log
+
+7. Вы не знаете, какие типы контекстов доступны для службы ftp. Какая команда позволяет получить более конкретную информацию?
+
+   semanage fcontext -l | grep ftp
+
+8. Ваш сервис работает не так, как ожидалось, и вы хотите узнать, связано ли это с SELinux или чем-то ещё. Какой самый простой способ узнать?
+
+   ausearch -m avc -ts recent (просмотр последних AVC‑сообщений) или просто audit2why для быстрой диагностики.
 
 # Выводы
 
-Здесь кратко описываются итоги проделанной работы.
+Я получил навыки работы с контекстом безопасности и политиками SELinux.
 
 # Список литературы{.unnumbered}
 
